fixed uneven rows

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1 {
 #input-row form {
     font-family: 'Nunito', sans-serif;
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 80% auto;
     grid-column-gap: 1%;
 }
 
